# podcast-curator

./: .env.example  .gitignore  README.md  pyproject.toml
.kiro/specs/nanook-curator/: design.md  requirements.md  tasks.md
specs/: design.md  requirements.md
src/nanook_curator/: __init__.py  cli.py  config.py  content_quality_scorer.py  engagement_analyzer.py  error_handling.py  models.py  quality_based_refinement.py  script_generator.py  search_refinement.py  transcript_processor.py  video_ranking_system.py  workflow.py  youtube_client.py
src/podcast_curator/: __init__.py  cli.py  config.py  content_quality_scorer.py  engagement_analyzer.py  error_handling.py  models.py  quality_based_refinement.py  search_refinement.py  transcript_processor.py  video_ranking_system.py  workflow.py  youtube_client.py
tests/: test_content_quality_scorer.py  test_engagement_analyzer.py  test_quality_based_refinement.py  test_script_generator.py  test_search_refinement.py  test_transcript_analysis.py  test_transcript_processor.py  test_video_ranking_system.py  test_youtube_client.py
